<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient_background"
            app:popupTheme="@style/AppTheme.PopupOverLay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
            android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_screen_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_user_image"
                    android:layout_width="@dimen/my_profile_user_image_size"
                    android:layout_height="@dimen/my_profile_user_image_size"
                    android:contentDescription="eh???"
                    android:src="@drawable/ic_user_place_holder"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_tip_marginTop">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="@dimen/et_text_size"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_tip_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/Email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_tip_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textSize="@dimen/et_text_size"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                    android:background="@drawable/gradient_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </LinearLayout>

</LinearLayout>